---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: for.md - For loops - Possibly-not-callable `__getitem__` method
mdtest path: crates/ty_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | def _(flag: bool):
 2 |     class CustomCallable:
 3 |         if flag:
 4 |             def __call__(self, *args, **kwargs) -> int:
 5 |                 return 42
 6 | 
 7 |         else:
 8 |             __call__: None = None
 9 | 
10 |     class Iterable1:
11 |         __getitem__: CustomCallable = CustomCallable()
12 | 
13 |     class Iterable2:
14 |         if flag:
15 |             def __getitem__(self, key: int) -> int:
16 |                 return 42
17 | 
18 |         else:
19 |             __getitem__: None = None
20 | 
21 |     # error: [not-iterable]
22 |     for x in Iterable1():
23 |         # TODO... `int` might be ideal here?
24 |         reveal_type(x)  # revealed: int | Unknown
25 | 
26 |     # error: [not-iterable]
27 |     for y in Iterable2():
28 |         # TODO... `int` might be ideal here?
29 |         reveal_type(y)  # revealed: int | Unknown
```

# Diagnostics

```
error[not-iterable]: Object of type `Iterable1` may not be iterable
  --> src/mdtest_snippet.py:22:14
   |
22 |     for x in Iterable1():
   |              ^^^^^^^^^^^
   |
info: It has no `__iter__` method and its `__getitem__` attribute is invalid
info: `__getitem__` has type `CustomCallable`, which is not callable

```

```
error[not-iterable]: Object of type `Iterable2` may not be iterable
  --> src/mdtest_snippet.py:27:14
   |
27 |     for y in Iterable2():
   |              ^^^^^^^^^^^
   |
info: It has no `__iter__` method and its `__getitem__` attribute is invalid
info: `__getitem__` has type `(bound method Iterable2.__getitem__(key: int) -> int) | None`, which is not callable

```
